--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+form{
+  margin-top: 10vh;
+  display: flex;
+  
+}
+form input{
+  width: 70%;
+  border-radius: 10px;
+  padding: 10px;
+}
+form button{
+  padding: 10px;
+  background-color: green;
+  color: #fff;
+  text-align: center;
+  border: none;
+  border-radius: 4px;
+  margin-left: 10px;
+}
+.container{
+  width: 70%;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: 30px;
+  
 }
